Fix[Launch Game]: Unable to launch versions generated by HMCL-Core. - Fix vulnerability causing HMCL-Core generated versions to fail due to artifact recognition issues. - Fix misidentification of NeoForge version information.